cleaned up z-index, fixed transformOrigin issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,11 @@ h1 {
     display:inline-block;
     position:relative;
 }
+#card #front {
+    z-index:1;
+}
 #card #back {
+    z-index:0;
     right:4px;
 }
 #flipper,
